[project]
name = "leetcrate"
version = "1.2.0"
description = "A tool to organize and generate LeetCode problems and solutions."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
authors = [
  { name = "Aleksander Borgerød", email = "aborgerod@gmail.com" }
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "requests",
]

[project.scripts]
leetcrate = "leetcrate.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["leetcrate*"]

[tool.setuptools.package-data]
"leetcrate" = ["templates/*.INI"]

[project.urls]
Homepage = "https://github.com/Borgerod/leetcrate"
Issues = "https://github.com/Borgerod/leetcrate/issues"
Source = "https://github.com/Borgerod/leetcrate"
[tool.bumpver]
current_version = "2026.1001-alpha"
version_pattern = "YYYY.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = false
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

